--- a/IMDB/Sentiment Analysis from Distil-Bert and BERT Using IMDB Random 1K Dataset .ipynb
+++ b/IMDB/Sentiment Analysis from Distil-Bert and BERT Using IMDB Random 1K Dataset .ipynb
@@ -520,28 +520,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7139</th>\n",
-       "      <td>This film is an almost complete waste of time....</td>\n",
+       "      <th>19589</th>\n",
+       "      <td>First off I'd like to point out that Sam Niel ...</td>\n",
        "      <td>negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7120</th>\n",
-       "      <td>Jude Law, Nicole Kidman, and Renne Zelwigger. ...</td>\n",
+       "      <th>29713</th>\n",
+       "      <td>As a professional poker dealer for over 25 yea...</td>\n",
        "      <td>negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28465</th>\n",
-       "      <td>What is the deal with all these ethnic crime g...</td>\n",
+       "      <th>13666</th>\n",
+       "      <td>I could tell this would be a bad one from the ...</td>\n",
        "      <td>negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30829</th>\n",
-       "      <td>IS there any reason to revive characters 10 ye...</td>\n",
+       "      <th>39471</th>\n",
+       "      <td>This thrown together piece of fecal matter add...</td>\n",
        "      <td>negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7031</th>\n",
-       "      <td>Iberia is nice to see on TV. But why see this ...</td>\n",
+       "      <th>34825</th>\n",
+       "      <td>I live in Salt Lake City and I'm not a Mormon,...</td>\n",
        "      <td>negative</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -550,11 +550,11 @@
       ],
       "text/plain": [
        "                                                  review sentiment\n",
-       "7139   This film is an almost complete waste of time....  negative\n",
-       "7120   Jude Law, Nicole Kidman, and Renne Zelwigger. ...  negative\n",
-       "28465  What is the deal with all these ethnic crime g...  negative\n",
-       "30829  IS there any reason to revive characters 10 ye...  negative\n",
-       "7031   Iberia is nice to see on TV. But why see this ...  negative"
+       "19589  First off I'd like to point out that Sam Niel ...  negative\n",
+       "29713  As a professional poker dealer for over 25 yea...  negative\n",
+       "13666  I could tell this would be a bad one from the ...  negative\n",
+       "39471  This thrown together piece of fecal matter add...  negative\n",
+       "34825  I live in Salt Lake City and I'm not a Mormon,...  negative"
       ]
      },
      "execution_count": 16,
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "id": "8c981f29",
    "metadata": {
     "scrolled": false
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "id": "39cbd3bb",
    "metadata": {
     "scrolled": false
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "id": "680266e6",
    "metadata": {},
    "outputs": [],
@@ -925,7 +925,9 @@
    "cell_type": "code",
    "execution_count": 58,
    "id": "12cf45d8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -977,10 +979,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "0e3738c9",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -989,16 +991,30 @@
      "text": [
       "\n",
       "\n",
-      "begin training using onecycle policy with max lr of 2e-05...\n",
+      "begin training using onecycle policy with max lr of 0.0002...\n",
       "Epoch 1/4\n",
-      "134/134 [==============================] - 1539s 11s/step - loss: 0.6491 - accuracy: 0.6350 - val_loss: 0.3931 - val_accuracy: 0.8550\n",
+      "134/134 [==============================] - 767s 6s/step - loss: 0.5095 - accuracy: 0.7387 - val_loss: 0.6121 - val_accuracy: 0.7600\n",
       "Epoch 2/4\n",
-      " 55/134 [===========>..................] - ETA: 13:51 - loss: 0.2919 - accuracy: 0.8788"
+      "134/134 [==============================] - 783s 6s/step - loss: 0.5058 - accuracy: 0.7613 - val_loss: 0.7520 - val_accuracy: 0.4750\n",
+      "Epoch 3/4\n",
+      "134/134 [==============================] - 773s 6s/step - loss: 0.7121 - accuracy: 0.5088 - val_loss: 0.6955 - val_accuracy: 0.4750\n",
+      "Epoch 4/4\n",
+      "134/134 [==============================] - 773s 6s/step - loss: 0.6993 - accuracy: 0.5013 - val_loss: 0.6950 - val_accuracy: 0.4750\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x233003615e0>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "learner1.fit_onecycle(2e-5,4)"
+    "learner1.fit_onecycle(2e-4,4)"
    ]
   },
   {
@@ -1006,7 +1022,7 @@
    "execution_count": 28,
    "id": "d02be54f",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1154,22 +1170,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "99aa2c63",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3508/2293213127.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_excel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'data_train.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdata_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_excel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'data_test.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mX_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreview\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mX_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_test\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreview\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "size of training set: 800\n",
+      "size of validation set: 200\n",
+      "positive    500\n",
+      "negative    500\n",
+      "Name: sentiment, dtype: int64\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Excellent special effects make this disaster m...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>One of the funniest films I ever saw in the th...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I waited for this movie to come out for a whil...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>This unassuming, fairly routine series deserve...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Idiotic hack crooks, a babe, a safe, a plan an...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>I was brought up on Doc Savage,and was petrifi...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Before I comment about this movie, you should ...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>I just saw The Big Trail in Vienna's Filmmuseu...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Maybe not the most original way of telling a s...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Anne (Natalie Portman) tells us about how much...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              review sentiment\n",
+       "0  Excellent special effects make this disaster m...  positive\n",
+       "1  One of the funniest films I ever saw in the th...  positive\n",
+       "2  I waited for this movie to come out for a whil...  positive\n",
+       "3  This unassuming, fairly routine series deserve...  positive\n",
+       "4  Idiotic hack crooks, a babe, a safe, a plan an...  positive\n",
+       "5  I was brought up on Doc Savage,and was petrifi...  positive\n",
+       "6  Before I comment about this movie, you should ...  positive\n",
+       "7  I just saw The Big Trail in Vienna's Filmmuseu...  positive\n",
+       "8  Maybe not the most original way of telling a s...  positive\n",
+       "9  Anne (Natalie Portman) tells us about how much...  positive"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
